Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/ATDSA_bookshelf__ContentReview__c.object
<CustomObject>
    <fields>
        <fullName>ATDSA_bookshelf__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Content Reviews</relationshipLabel>
        <relationshipName>Content_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__ContentId__c</fullName>
        <description>String value of ContentVersion ID rated. Using string because we can&apos;t lookup directly to Content</description>
        <label>ContentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__ContentLink__c</fullName>
        <formula>HYPERLINK(&quot;/sfc/#version?selectedDocumentId=&quot; &amp; ATDSA_bookshelf__ContentId__c, &quot;View Content&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__ContentTitle__c</fullName>
        <description>Title of content viewed, should be pulled from ContentVersion by app.</description>
        <label>Content Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Document_Emailed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether for this visit this document was emailed to this Contact</description>
        <label>Document Emailed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__PLaylist_Title__c</fullName>
        <formula>ATDSA_bookshelf__Playlist_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLaylist Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Playlist_Id__c</fullName>
        <label>Playlist Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__TimeViewed__c</fullName>
        <label>Time Viewed (seconds)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Content Review</label>
    <listViews>
        <fullName>ATDSA_bookshelf__All</fullName>
        <columns>NAME</columns>
        <columns>ATDSA_bookshelf__ContactId__c</columns>
        <columns>ATDSA_bookshelf__Rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSACR-{0000000000}</displayFormat>
        <label>Content Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>